<resources>
    <string name="app_name">Tip Hublaa</string>
    <string name="choose_tip">Choose tip</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_15">15%</string>
    <string name="_25">25%</string>
    <string name="_50">50%</string>
    <string name="_40">40%</string>
    <string name="split_by">Split by</string>
    <string name="amount_of_people">Enter Amount of people</string>
    <string name="total_amount">Total Amount</string>
    <string name="tip_now">Tip Now</string>
    <string name="_10">10%</string>
    <string name="_35">35%</string>
    <string name="custom_tip">Custom Tip</string>
    <string name="round_up_tip">Round Up Tip</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_total">Bill total</string>
    <string name="base">Base</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="_0_00">0.00,-</string>
</resources>