<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_calculate_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_first"
        app:layout_constraintBottom_toTopOf="@id/et_first"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/bill_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_calculate_tip"
        app:layout_constraintBottom_toTopOf="@id/tv_tip_now">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tip_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_now"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first"
        app:layout_constraintBottom_toTopOf="@id/cg_tip"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_now"
        app:layout_constraintBottom_toTopOf="@id/btn_custom">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_10"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/_10"
            android:gravity="center"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_15"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/_15"
            android:gravity="center"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_25"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/_25"
            android:gravity="center"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_35"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/_35"
            android:gravity="center"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_50"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/_50"
            android:gravity="center"/>

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_custom"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/custom_tip"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_tip"
        app:layout_constraintBottom_toTopOf="@id/sm_round_up_tip"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_round_up_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_marginTop="12dp"
        android:elevation="20dp"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        app:layout_constraintTop_toBottomOf="@id/btn_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_calculate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sm_round_up_tip"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_summary_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/base"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tip"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_summary_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_base_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tip_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textStyle="bold"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>